Updated the user service to have the Swagger Auth Bearer logic and other modifications
